--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@
 }
 
 .quiz-arena {
-  border: 2px solid greenyellow;
+  background-color: #2d1e5c;
   border-radius: 10px;
-  padding: 10px;
+  box-shadow: 5px 10px 8px #888888;
   margin: 0 20%;
-  height: 22vh;
+  height: 100%;
   align-items: center;
   justify-content: center;
 }
@@ -17,17 +17,34 @@
   font-size: 1em;
   font-style: italic;
   font-family: monospace;
+  background-color: #2d1e5c;
+  border-radius: 10px 10px 0 0;
+  color: white;
   padding: 10px;
 }
 
 .question-arena {
-  padding-bottom: 20px;
+  background-color: #6a5adf;
+  color: white;
+  padding: 15px;
   align-items: center;
   justify-content: center;
   font-size: large;
-  font-weight: bold;
+  font-weight: 500;
+}
+
+.answer-arena {
+  padding: 30px;
+  align-items: center;
+  justify-content: center;;
 }
 
 .button {
   margin: 1%;
+}
+
+.score-arena {
+  padding: 30px;
+  font-size: large;
+  color: white;
 }
